--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,6 +15,11 @@
             <td th:text="${hobby.enabled}"></td>
         </tr>
     </div>
+    <div>
+        <tr th:each="user : ${users}">
+            <td th:text="${user.name}"></td>
+        </tr>
+    </div>
 </main>
 </body>
 </html>
