--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,11 +4,7 @@
 
 <body>
 <main>
-    <nav>
-        <a href="/">Home</a>
-        <a href="/">Login</a>
-        <a href="/">About</a>
-    </nav>
+    <div th:replace="~{components/header :: header}">Header</div>
     <div>
         <tr th:each="hobby : ${hobbies}">
             <td th:text="${hobby.name}"></td>
