--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -7,7 +7,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/">Login</a></li>
-        <li><a href="/">About</a></li>
+        <li><a href="/about">About</a></li>
     </ul>
 </nav>
 </body>
