--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,14 +6,16 @@
 <main>
     <div th:replace="~{components/header :: header}">Header</div>
     <div>
-        <form action="/login">
+        <form th:action="login" name="f" method="post">
             <label>
                 <input type="text" name="username"/>
             </label>
             <label>
-                <input type="text" name="password"/>
+                <input type="password" name="password"/>
             </label>
-            <button type="submit">Submit</button>
+            <button type="submit" value="submit">Submit</button>
+
+
         </form>
     </div>
 </main>
