--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -6,7 +6,7 @@
 <nav th:fragment="header">
     <ul>
         <li><a href="/">Home</a></li>
-        <li><a href="/">Login</a></li>
+        <li><a href="/login">Login</a></li>
         <li><a href="/about">About</a></li>
     </ul>
 </nav>
