--- a/src/main/resources/templates/my-account.html
+++ b/src/main/resources/templates/my-account.html
@@ -16,7 +16,16 @@
         <tr th:each="task : ${user.tasks.tasks}">
             <td th:text="${task.name}"/>
         </tr>
-
+        <div>
+            <h3>Add hobbies</h3>
+            <form th:action="@{/account/addHobby}" th:method="post">
+                <th:block th:each="hobby : ${user.allAvailableHobbies}">
+                    <input type="radio" name="hobbyName" th:value="${hobby.name}"/>
+                    <label th:text="${hobby.name}"></label>
+                </th:block>
+                <button type="submit">submit</button>
+            </form>
+        </div>
     </div>
 </main>
 </body>
