Added anon stuff

--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/">Home</a></li>
         <li sec:authorize="isAnonymous()"><a href="/login">Login</a></li>
+        <li sec:authorize="isAnonymous()"><a href="/register">Register</a></li>
         <li><a href="/about">About</a></li>
         <th:block sec:authorize="isAuthenticated()">
             <li><a th:href="@{|/account/${current_user.name}|}">My account [[|[${current_user.name}]|]] </a></li>
