Added thymeslf user info

--- a/src/main/resources/templates/components/header.html
+++ b/src/main/resources/templates/components/header.html
@@ -5,6 +5,7 @@
 <head>
 </head>
 <body>
+<!--/*@thymesVar id="current_user" type="com.CheckTokenQuery"*/-->
 <nav th:fragment="header">
     <ul>
         <li><a href="/">Home</a></li>
@@ -12,7 +13,8 @@
         <li sec:authorize="isAnonymous()"><a href="/register">Register</a></li>
         <li><a href="/about">About</a></li>
         <th:block sec:authorize="isAuthenticated()">
-            <li><a th:href="@{|/account/${current_user.name}|}">My account [[|[${current_user.name}]|]] </a></li>
+            <li>
+                <a th:href="@{|/account/${current_user.name}|}">My account [[|[${current_user.name}]|]] </a></li>
             <li><a th:href="@{/logout}">Log out</a></li>
         </th:block>
     </ul>
